--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,8 @@
 spring.application.name=ExpenseShare
-
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.properties.hibernate.show-sql=true
+spring.jpa.show-sql=true
+spring.datasource.url=jdbc:mysql://localhost:3306/expenseShare
+spring.datasource.username=root
+spring.datasource.password=root
